--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
     <form id="create-task-form" action="#" method="post">
       <label for="new-task-description">Task description:</label>
       <input type="text" id="new-task-description" name="new-task-description" placeholder="description">
+      <select id="priority">
+        <option value="high">High Priority</option>
+        <option value="medium">Medium Priority</option>
+        <option value="low">Low Priority</option>
+      </select>
       <input type="submit" value="Create New Task"> <!--Submit Button-->
     </form>
 
